<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="@drawable/dialog_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:fontFamily="@font/distantgalaxy"
            android:gravity="center"
            android:text="@string/twoplayer"
            android:background="@color/black"
    />
    <EditText
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textCursorDrawable="@color/white"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint1p"
            android:id="@+id/et_player1"/>
    <EditText
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textCursorDrawable="@color/white"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint2p"
            android:id="@+id/et_player2"/>

    <Button
            android:text="@string/start"
            android:background="@null"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_start"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

</LinearLayout>