<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/deathstar"
             tools:context=".model.LoginFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/oneplayer"
                android:background="@drawable/btn_boarder"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="10dp"
                android:id="@+id/btn_1p"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_2p"/>
        <Button
                android:text="@string/twoplayer"
                android:background="@drawable/btn_boarder"
                android:textColor="@color/white"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="17sp"
                android:id="@+id/btn_2p"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_lb"/>
        <Button
                android:text="@string/leaderboard"
                android:background="@drawable/btn_boarder"
                android:textColor="@color/white"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:padding="10dp"
                android:id="@+id/btn_lb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/distantgalaxy"
                android:textColor="@color/swyellow"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textSize="30sp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline5"/>

        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline5" app:layout_constraintGuide_begin="232dp"
                                              android:orientation="horizontal"/>
        <ImageView
                android:src="@drawable/speaker"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:id="@+id/iv_sound"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>